# wizardoc

./: .gitignore  API_MIGRATION_SUMMARY.md  Excalidraw-RiskTool-Mockup.excalidraw  Makefile  README.md  REFACTORING_SUMMARY.md  complete-db.json  db.json  middleware.ts  package-lock.json  package.json  questions.csv  study_details2.json
ai-service/: Dockerfile  README.md  config.yaml  pyproject.toml
ai-service/src/: config.py  document_pipeline.py  main.py  ollama_client.py  session_store.py
ai-service/src/routers/: sessions.py
api/: Dockerfile  README.md  pyproject.toml
api/src/: main.py
app/: layout.tsx  loading.tsx
app/my-studies/: loading.tsx  page.tsx
app/question-pool/: loading.tsx  page.tsx
components/: results-display.tsx
deployment/: README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf
examples/: .~lock.GREG_Feasibility_Process_v1-DEMO.docx#  GREG_Feasibility_Process_v1-DEMO-TABLE.docx  GREG_Feasibility_Process_v1-DEMO.docx  MetadataTemplate.json  MetadataTemplate2.json  iso14971.csv  iso14971.json  questions-demo.csv  questions-demo.json  questions-table.csv  questions-table.json  questions.csv  questions.json  sourcefiles.txt  study_details.json
hooks/: use-assessment.ts  use-persisted-state.ts  use-question-pools.ts  use-studies.ts
lib/: data.ts  pdf-generator.tsx
lib/constants/: assessment.ts  risk.ts
web/: .dockerignore  API_MIGRATION_SUMMARY.md  Dockerfile  FRONTEND_STRUCTURE_COMPARISON.md  complete-db.json  db.json  middleware.ts  next.config.ts  package-lock.json  package.json  seed.sh
(+154 files in other folders)
