[project]
name = "ai-service"
version = "0.1.0"
description = "RAG-based AI assistance microservice for the wizard workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.119.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.9",
]
